--- a/css/main.css
+++ b/css/main.css
@@ -1,496 +1,401 @@
-*{
-	margin: 0;
-	padding: 0; 
-}
-html,body
-{
-	height: 100%;
-}
-table td
-{
-	 font-family:"Times New Roman",Georgia,Serif;
-	 font-weight: bold;
-	 text-align: center;
-}
-
-#loading
-{
-	position: fixed;
-	width: 100%;
-	height: 100%;
-	background-color: #fff;
-	z-index: 9999999999999999999;
-	display:flex;
-	justify-content:center;
-	align-items:center;
-	
-}
-#loading img
-{
-	display: inline-block;
-	width: 300px;
-}
-#switch
-{
-	width: 500px;
-	position: absolute;
-	right: 25%;
-	top: 5%;
-	z-index: 99;
-}
-
-.col{
-	position: absolute;
-	z-index: 999;
-	right: 27%;
-	font-size: 18px;
-	margin-top: 6%;
-}
-/*.col h4{
+    * {
+        margin: 0;
+        padding: 0;
+    }
+    
+    body,
+    html {
+        height: 100%;
+        min-width: 1308px;
+        overflow: auto;
+    }
+    
+    table td {
+        font-family: "Times New Roman", Georgia, Serif;
+        font-weight: bold;
+        text-align: center;
+    }
+    
+    #loading {
+        position: fixed;
+        width: 100%;
+        height: 100%;
+        background-color: #fff;
+        z-index: 9999999999999999999;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    
+    #loading img {
+        display: inline-block;
+        width: 300px;
+    }
+    
+    #switchContainer {
+        width: 500px;
+        position: absolute;
+        right: 20%;
+        top: 5%;
+        z-index: 99;
+    }
+    
+    .col {
+        position: absolute;
+        z-index: 999;
+        right: 27%;
+        font-size: 18px;
+        margin-top: 6%;
+    }
+    /*.col h4{
 	height:40px;
 	line-height:40px
 }*/
-.opt{
-	height:30px;
-	line-height:24px;
-	display: inline-block;
-}
-
-#alarm
-{
-	position: absolute;
-	right: 27%;
-	top: 5%;
-	z-index: 999;
-}
-
-#getWarning
-{
-	position: absolute;
-	right: 35%;
-	top: 5%;
-	z-index: 999;
-}
-#clear
-{
-	position: relative;
-	top: 0;
-	right: 0;
-	width: 40%;
-	margin-top: 2%;
-	margin-bottom: 2%;
-	display: inline-block;
-}
-#off
-{
-	width: 40%;
-	float: right;
-	margin-top: 2%;
-	display: inline-block;
-}
-#list th,#list td
-{
-	text-align: center;
-}
-.pic{
-	width: 1800px;
-	height: 1200px;
-	background-image: url(../img/pic.png);
-	background-size: 100%;
-	position: relative;
-	left: -100px;
-	top: -120px;
-	z-index: 1;
-	transform:scale(0.8,0.8);
-}
-.flag
-{
-	height: 70px;
-	width: 55px;
-	position: absolute;
-	z-index: 2;
-	cursor: pointer;
-}
-.detial
-{
-	cursor: pointer;
-}
-
-#flag1
-{
-	top: 835px;
-	left: 855px;
-}
-#flag2
-{
-	top: 850px;
-	left: 188px;
-}
-#flag6
-{
-	top: 660px;
-	left: 1635px;
-}
-
-#flag8
-{
-	top: 183px;
-	left: 845px;
-}
-#flag9
-{
-	top: 183px;
-	left: 348px;
-}
-#flag10
-{
-	top: 183px;
-	left: 610px;
-}
-#flag11
-{
-	top: 954px;
-	left: 1083px;
-	height: 84px;
-	width: 63px;
-}
-
-
-
-
-.box
-{
-	position: absolute;
-	z-index: 2;
-	cursor: pointer;
-}
-.box_h
-{
-	width: 50px;
-	height: 10px;
-
-}
-.box_v
-{
-	width: 10px;
-	height: 50px;
-
-}
-
-/*分支箱电缆段分布*/
-
-#box1_2
-{
-	left: 1658px;
-	top: 531px;
-}
-#box1_3
-{
-	left: 1588px;
-	top: 492px;
-}
-#box2_3
-{
-	left: 1444px;
-	top: 492px;
-}
-#box2_4
-{
-	left: 1414px;
-	top: 531px;
-}
-#box3_5
-{
-	left: 1193px;
-	top: 492px;
-}
-#box3_13
-{
-	left: 1092px;
-	top: 492px;
-}
-#box4_6
-{
-	left: 897px;
-	top: 426px;
-}
-#box4_7
-{
-	left: 867px;
-	top: 348px;
-}
-#box5_8
-{
-	left: 665px;
-	top:  426px;
-}
-#box5_9
-{
-	left: 635px;
-	top: 347px;
-}
-#box7_13
-{
-	left: 909px;
-	top:  650px;
-}
-#box7_14
-{
-	left: 877px;
-    top: 690px;
-}
-#box8_15
-{
-	left: 240px;
-    top: 632px;
-}
-#box8_16
-{
-	left: 209px;
-    top: 671px;
-}
-
-
-
-/*分支箱信息分布*/
-#box_info1
-{
-	top: 230px;
-	left: 1570px;
-}
-#box_info2
-{
-	top: 230px;
-	left: 1330px;
-}
-#box_info3
-{
-	top: 230px;
-	left: 1070px;
-}
-#box_info4
-{
-	top: 210px;
-	left: 660px;
-	background-color: rgba(255,255,255,.5);
-}
-#box_info5
-{
-	top: 220px;
-	left: 410px;
-	background-color: rgba(255,255,255,.5);
-}
-
-#box_info7
-{
-	top: 581px;
-	left: 982px;
-}
-#box_info8
-{
-	top: 433px;
-	left: -90px;
-}
-
-
-/* 箱式变压器信息分布 */
-#move1
-{
-	left: 913px;
-    top: 813px;
-} 
-#move2
-{
-    left: 219px;
-    top: 723px;
-}
-#move6
-{
-    left: 1517px;
-    top: 638px;
-}
-#move8
-{
-	left: 904px;
-    top: 52px;
-}
-#move9
-{
-	left: 406px;
-    top: 52px;
-}
-#move10
-{
-    left: 669px;
-    top: 52px;
-}
-#move11
-{
-	left: 1159px;
-    top: 940px;
-} 
-#station
-{
-	background: url(../img/station.png);
-	background-size: 100%;
-	width: 70px;
-	height: 130px;
-	position: relative;
-	top: 950px;
-	left: 1080px;
-}
-.line_loss
-{
-	width: 30px;
-	height: 30px;
-	line-height: 30px;
-	font-size: 20px;
-	text-align: center;
-	position: absolute;
-	color: #fff;
-	background-color: #FF5722;
-	cursor: pointer;
-}
-
-#line_loss3
-{
-	top: 510px;
-	left: 1504px;
-}
-#line_loss5
-{
-	left: 1261px;
-    top: 511px;
-    display: none;
-}
-#line_loss6
-{
-	left: 940px;
-    top: 439px;
-    display: none;
-}
-#line_loss8
-{
-	display: none;
-	left: 718px;
-    top: 442px;
-}
-#line_loss13
-{
-	left: 995px;
-    top: 515px;
-}
-
-
-.Susceptance
-{
-	width: 30px;
-	height: 30px;
-	line-height: 30px;
-	font-size: 20px;
-	text-align: center;
-	position: absolute;
-	color: #fff;
-	background-color: #2F4056;
-	cursor: pointer;
-}
-#Susceptance3
-{
-	top: 510px;
-	left: 1555px;
-}
-#Susceptance5
-{
-	left: 1308px;
-    top: 511px;
-}
-#Susceptance6
-{
-	left: 986px;
-    top: 438px;
-}
-#Susceptance8
-{
-	left: 765px;
-    top: 442px;
-}
-#Susceptance13
-{
-	left: 1047px;
-    top: 515px;
-}
-
-
-.I_history
-{
-	width: 30px;
-	height: 30px;
-	line-height: 30px;
-	font-size: 20px;
-	text-align: center;
-	position: absolute;
-	color: #fff;
-	background-color: #01AAED;
-	cursor: pointer;
-	z-index: 99999;
-}
-#I_history2
-{
-	left: 1624px;
-    top: 609px;
-}
-#I_history3
-{
-	left: 1504px;
-    top: 452px;
-}
-#I_history4
-{
-	left: 1380px;
-    top: 611px;
-}
-#I_history5
-{
-    left: 1261px;
-    top: 453px;
-}
-#I_history6
-{
-	left: 898px;
-    top: 439px;
-}
-#I_history7
-{
-	left: 886px;
-    top: 308px;
-}  
-#I_history8
-{
-	left: 717px;
-    top: 394px;
-}
-#I_history9
-{
-	left: 625px;
-    top: 289px;
-}
-#I_history13
-{
-	left: 930px;
-    top: 515px;
-}
-#I_history14
-{
-	left: 843px;
-    top: 779px;
-}
-#I_history15
-{
-	left: 508px;
-    top: 594px;
-}
-#I_history16
-{
-	left: 170px;
-    top: 748px;
-}
+    
+    .opt {
+        height: 30px;
+        line-height: 24px;
+        display: inline-block;
+    }
+    
+    #alarm {
+        position: absolute;
+        right: 27%;
+        top: 5%;
+        z-index: 999;
+    }
+    
+    #getWarning {
+        position: absolute;
+        right: 35%;
+        top: 5%;
+        z-index: 999;
+    }
+    
+    #clear {
+        position: relative;
+        top: 0;
+        right: 0;
+        width: 40%;
+        margin-top: 2%;
+        margin-bottom: 2%;
+        display: inline-block;
+    }
+    
+    #off {
+        width: 40%;
+        float: right;
+        margin-top: 2%;
+        display: inline-block;
+    }
+    
+    #list th,
+    #list td {
+        text-align: center;
+    }
+    
+    #list1 th,
+    #list_2 th {
+        text-align: center;
+    }
+    
+    .mycharts {
+        width: 570px;
+        height: 300px;
+    }
+    /* 显示图层的样式，主要是设置背景图片 */
+    
+    .pic {
+        /* width: 1800px; */
+        height: 900px;
+        background-image: url(../img/pic.png);
+        background-size: 100%;
+        position: relative;
+        /* left: -100px;
+    top: -120px; */
+        z-index: 1;
+        /* transform: scale(0.8, 0.8); */
+        margin: 0 auto;
+    }
+    /* 表格的样式 */
+    
+    .XBdetail {
+        width: 235px;
+        position: absolute;
+    }
+    /* 为每个表格设置不同的显示位置 */
+    
+    #table_info0 {
+        top: 200px;
+        right: 135px;
+    }
+    
+    #table_info1 {
+        top: 905px;
+        right: 265px;
+    }
+    
+    #table_info2 {
+        top: 200px;
+        right: 450px;
+    }
+    
+    #table_info3 {
+        top: 905px;
+        right: 595px;
+    }
+    
+    #table_info4 {
+        top: 200px;
+        right: 760px;
+    }
+    
+    #table_info5 {
+        top: 905px;
+        left: 775px;
+    }
+    
+    #table_info6 {
+        top: 905px;
+        left: 400px;
+    }
+    
+    #table_info7 {
+        top: 150px;
+        left: 340px;
+    }
+    
+    #table_info8 {
+        top: 150px;
+        left: 340px;
+    }
+    
+    .detail {
+        cursor: pointer;
+    }
+    /* 各个机组覆盖的颜色图层标志 */
+    
+    .flag {
+        height: 45px;
+        width: 45px;
+        position: absolute;
+        z-index: 2;
+        cursor: pointer;
+    }
+    
+    #flag0 {
+        top: 758px;
+        right: 189px;
+    }
+    
+    #flag1 {
+        top: 759px;
+        right: 358px;
+    }
+    
+    #flag2 {
+        top: 759px;
+        right: 527px;
+    }
+    
+    #flag3 {
+        top: 758px;
+        right: 705px;
+    }
+    
+    #flag4 {
+        top: 758px;
+        right: 860px;
+    }
+    
+    #flag5 {
+        top: 758px;
+        left: 841px;
+    }
+    
+    #flag6 {
+        top: 759px;
+        left: 482px;
+    }
+    
+    #flag7 {
+        top: 286px;
+        left: 606px;
+    }
+    
+    #flag8 {
+        top: 759px;
+        left: 370px;
+    }
+    
+    #flag9 {
+        top: 760px;
+        left: 266px;
+    }
+    
+    #flag10 {
+        top: 760px;
+        left: 149px;
+    }
+    /*  */
+    
+    .box {
+        position: absolute;
+        z-index: 2;
+        cursor: pointer;
+    }
+    
+    .box_h {
+        width: 50px;
+        height: 10px;
+    }
+    
+    .box_v {
+        width: 10px;
+        height: 50px;
+    }
+    /*分支箱电缆段分布*/
+    
+    #box1_2 {
+        left: 1658px;
+        top: 531px;
+    }
+    
+    #box1_3 {
+        left: 1588px;
+        top: 492px;
+    }
+    
+    #box2_3 {
+        left: 1444px;
+        top: 492px;
+    }
+    
+    #box2_4 {
+        left: 1414px;
+        top: 531px;
+    }
+    
+    #box3_5 {
+        left: 1193px;
+        top: 492px;
+    }
+    
+    #box3_13 {
+        left: 1092px;
+        top: 492px;
+    }
+    
+    #box4_6 {
+        left: 897px;
+        top: 426px;
+    }
+    
+    #box4_7 {
+        left: 867px;
+        top: 348px;
+    }
+    
+    #box5_8 {
+        left: 665px;
+        top: 426px;
+    }
+    
+    #box5_9 {
+        left: 635px;
+        top: 347px;
+    }
+    
+    #box7_13 {
+        left: 909px;
+        top: 650px;
+    }
+    
+    #box7_14 {
+        left: 877px;
+        top: 760px;
+    }
+    
+    #box8_15 {
+        left: 240px;
+        top: 632px;
+    }
+    
+    #box8_16 {
+        left: 209px;
+        top: 671px;
+    }
+    /* 电流的历史信息点击按钮 */
+    
+    .I_history {
+        width: 30px;
+        height: 30px;
+        line-height: 30px;
+        font-size: 20px;
+        text-align: center;
+        position: absolute;
+        color: #fff;
+        background-color: #01AAED;
+        cursor: pointer;
+        z-index: 99999;
+    }
+    
+    #I_history2 {
+        left: 1624px;
+        top: 609px;
+    }
+    
+    #I_history3 {
+        left: 1504px;
+        top: 452px;
+    }
+    
+    #I_history4 {
+        left: 1380px;
+        top: 611px;
+    }
+    
+    #I_history5 {
+        left: 1261px;
+        top: 453px;
+    }
+    
+    #I_history6 {
+        left: 898px;
+        top: 439px;
+    }
+    
+    #I_history7 {
+        left: 886px;
+        top: 308px;
+    }
+    
+    #I_history8 {
+        left: 717px;
+        top: 394px;
+    }
+    
+    #I_history9 {
+        left: 625px;
+        top: 289px;
+    }
+    
+    #I_history13 {
+        left: 930px;
+        top: 515px;
+    }
+    
+    #I_history14 {
+        left: 843px;
+        top: 779px;
+    }
+    
+    #I_history15 {
+        left: 508px;
+        top: 594px;
+    }
+    
+    #I_history16 {
+        left: 170px;
+        top: 748px;
+    }
